# evident

./: .gitignore  INSTRUCTIONS.md  LICENSE  README.md  demo-google.sh  justfile  proto
base/: autoinstall.md  autoinstall.yaml.j2
base/artifacts/: README.md
base/config/: README.md
base/config/templates/: autoinstall-values.template.yaml  local-vm-config.template.env
base/host-scripts/: README.md  autoinstall-generator.py  check-iso.sh  create-vm.sh  crypt-passwd.sh  download-iso.sh  generate-seed-iso.sh  post-install.sh  post-provision.sh  provision-provision.sh
base/provision/: README.md  activate  deactivate  post-install.sh  post-provision.sh
base/provision/post-install/: 01-confidential-partition.sh
base/provision/post-provision/: 98-cloud-requirements.sh  99-self-destruct-provision.sh
client/: .gitignore  buf.gen.yaml  flake.nix  go.mod  go.sum  main.go
client/cmd/evident/: attest.go  build.go  measure.go  package.go  root.go  servecertify.go  submitpackage.go  utils.go
client/cmd/profiler-client/: main.go
client/cmd/provider/: main.go
client/cmd/stresstester/: main.go  resource-monitor.sh
client/internal/attest/: attest.go
client/internal/config/: config.go
client/internal/crypto/: crypto_test.go  proto-pubkey.go  proto-pubkey_test.go  proto-signature.go  signature_hash.go
client/internal/domain/: crypto.go  enum-amdmodels.go  enum-cloudprovider.go  enum-evidencetype.go  enum-hashalgorithm.go  enum-hwvendor.go  enum-secureplatform.go  evidence.go  evidence_test.go  expected-pcr-digests.go  manifest.go  snp-evidence.go  snp-report.go  snp_test.go  sw-evidence.go  tpm-report.go  tpm_test.go
client/internal/grpc/: attester-client.go  certificate-issuer-client.go  client.go  options.go  utils.go
client/internal/keyring/: keyring.go  keyring_test.go
client/internal/measure/: measure.go
client/internal/packager/: packager.go  packages.go
client/internal/report/: report_helpers.go  report_types.go
client/internal/sanitize/: cloud-provider.go  commit.go  common.go  cpu-count.go  ec2-instance-id.go  expected-pcrs.go  image-variation.go  key-id.go  (+5 more)
dev.google/: google.sh
dev.lima/: .gitignore  create.sh  delete.sh  edit.sh  enter.sh  env.sh.example  stop.sh
dev.lima/config/: base.yaml  lima.yaml.j2  template.lima.yaml
image/: flake.nix
image/src/: default.nix  evident-server.nix  image.nix
infrastructure/docs.aws.bucket.vmimport/: commands.sh  role-policy.json
instance/: .gitignore  Cargo.toml  buf.yaml  flake.nix
instance/crates/common-core/: Cargo.toml  build.rs
instance/crates/common-core/proto/evident_protocol/v1/: pubkey.proto  verifier_attester.proto
instance/crates/common-core/src/: constants.rs  errors.rs  lib.rs  proto.rs
instance/docs.systemd/: README.md  evident-keygen.service  evident-server.service
instance/nix/: module.nix  packages.nix
instance/services/evident-keygen/: Cargo.toml
instance/services/evident-keygen/src/: main.rs
instance/services/evident-server/: Cargo.toml  build.rs
instance/services/evident-server/config/: .gitignore  certificate-issuer-endpoint.txt.example
instance/services/evident-server/src/: collectors.rs  handlers.rs  init.rs  main.rs  services.rs  target_info.rs
instance/services/evident-server/src/collectors/: snp.rs  tpm.rs
instance/services/evident-server/src/collectors/snp/: ec2_gce.rs
instance/services/evident-server/src/collectors/tpm/: ec2.rs  gce.rs
instance/services/evident-server/src/handlers/: attester_service_handler.rs
instance/services/evident-server/src/services/: attester_service.rs
server/: .gitignore  Cargo.toml  build.rs  flake.nix
server/proto/remote_attestation/v1/: remote_attestation.proto
server/src/: collectors.rs  handlers.rs  main.rs  proto.rs  services.rs  target_info.rs
server/src/collectors/: error.rs  nonce.rs  snp.rs  tpm.rs
server/src/collectors/snp/: avm.rs  ec2_gce.rs  mock.rs
server/src/collectors/tpm/: avm.rs  ec2.rs  gce.rs
server/src/domain/: evidence.rs
server/src/handlers/: reflection.rs  remote_attestation.rs
server/src/services/: remote_attestation.rs
thesis.evaluation/table.attest-workflow-timing/: ec2.json  flamegraph.py  gce.json  script.sh
(+77 files in other folders)
