[workspace]
members = ["crates/*", "services/*"]
resolver = "2"

[workspace.dependencies]
common-core = { path = "crates/common-core" }
env_logger = { version = "0.11.9" }
log = { version = "0.4.29" }
tokio = { version = "1.50.0", features = ["full"] }
prost = { version = "0.14.1" }
tonic-prost = { version = "0.14.2" }
tonic = { version = "0.14.5", features = ["transport", "tls-ring"] }
tonic-prost-build = { version = "0.14.5" }
sev = { version = "7.1.0" }
tss-esapi = { version = "7.6.0" }
sha2 = { version = "0.10.9" }
generic-array = { version = "1.3.5" }
x509-parser = { version = "0.18.1" }
once_cell = { version = "1.21.3" }
hex = { version = "0.4.3" }
digest = { version = "0.11.1" }
signature = { version = "2.2.0" }
nom = { version = "8.0.0" }
p256 = { version = "0.13.2" }
p384 = { version = "0.13", features = ["pkcs8", "pem"] }
p521 = { version = "0.13.3", features = ["ecdsa", "pkcs8"] }
rcgen = { version = "0.14", features = ["crypto", "pem", "ring"] }
time = { version = "0.3" }
rand_core = { version = "0.6", features = ["getrandom"] }
nix = { version = "0.30", features = ["fs", "user"] }
thiserror = { version = "2.0.18" }
sd-notify = { version = "0.4.5" }
rustls = { version = "0.23.37", features = ["ring"] }
tokio-rustls = { version = "0.26.4", features = ["ring"] }
tower = { version = "0.5.3" }
hyper-util = { version = "0.1.20" }
base64 = { version = "0.22.1" }
