[package]
name = "evident-server"
version = "0.1.0"
edition = "2024"

[dependencies]
cfg-if = "1.0.4"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.29"
once_cell = "1.21.3"
p256 = "0.13.2"
prost = "0.14.1"
rsa = "0.9.9"
serde = "1.0.228"
sev = "7.1.0"
sha2 = "0.10.9"
spki = "0.7.3"
thiserror = "2.0.16"
tokio = "1.47.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"
tss-esapi = "7.6.0"
x509-parser = "0.18.0"

[build-dependencies]
tonic-prost-build = "0.14.2"

[package.metadata.cargo-machete]
ignored = [
    "prost",
    "tonic-prost"
]

[features]
default = []
snp_ec2 = []
snp_avm = []
snp_gce = []
snp_qemu = []
snp_mock = []
qemu_vmpl0 = []
qemu_vmpl1 = []
qemu_vmpl2 = []
qemu_vmpl3 = []
