[package]
name = "common-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
sev = { workspace = true }
tss-esapi = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
